<resources>
    <string name="app_name">Ledger App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">@string/app_name</string>
    <string name="menu_gallery">Logout</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="create_task">Create a Task</string>

    <string name="name">Name</string>
    <string name="details">Transaction Details</string>
    <string name="amount">Amount</string>
    <string name="done">Done</string>
    <string name="empty_transaction_list">No transaction found!!</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="status">status</string>
    <string name="pending">PENDING</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
</resources>
